--- a/app/[locale]/(app)/layout.module.scss
+++ b/app/[locale]/(app)/layout.module.scss
@@ -1,6 +1,7 @@
 .wrapper {
   position: relative;
   min-height: 100vh;
+  min-height: 100dvh;
   overflow-x: clip;
 }
 
